--- a/P2_remou_amed.css
+++ b/P2_remou_amed.css
@@ -6,45 +6,42 @@
     padding-right: 10px;
     color: #607D8B;
 }
-header{                                     /* l'en tête de la page */
+.display{
     display: flex;
-    align-items: center;
-    justify-content: center;
+}
+                                                /* l'en tête de la page */
+
+header{                                             
     height: 219px;
+    align-items: center;
 }
 h1{
     margin-top: 125px;
 }
-
-img{
-    width: 100%;
-    /*
-    height: 180px;
-    border-radius: 50%;
-    border: 2px #E1F5FE solid;
-    box-shadow:  0 0 9px #E1F5FE;
-    overflow: hidden;*/
-    
+header .gauche{
+    height: 219px;
+    height: 100%;
+}
+.centrer{
+    justify-content: center;
+    align-items: center;
 }
 #image{
-    display: flex;
-    align-items: center;
-    /*width: 220px ;
-    height: 220px ;
-    margin: auto;*/
     width: 140px;
     height: 140px;
-    overflow: hidden;
     border-radius: 50%;
     box-shadow:  0 0 9px #E1F5FE;
-    margin: 40px;
+    overflow: hidden;
 }
-strong{
+img{
+    width: 100%;
+}
+.color{
     color: #64B5F6;
 }
 em{
     font-style: normal;
-   border-bottom: 3px #64B5F6 solid;
+    border-bottom: 3px #64B5F6 solid;
 }
 h1, h2, h3{
     margin:0;
