--- a/P2_remou_amed.css
+++ b/P2_remou_amed.css
@@ -6,12 +6,12 @@
     padding-right: 10px;
     color: #607D8B;
 }
-.display{
-    display: flex;
-}
+
                                                 /* l'en tête de la page */
 
-header{                                             
+header{
+    display: flex;
+    flex-direction: row-reverse;
     height: 219px;
     align-items: center;
 }
@@ -19,14 +19,16 @@ h1{
     margin-top: 125px;
 }
 header .gauche{
-    height: 219px;
-    height: 100%;
-}
-.centrer{
+    display: flex;
     justify-content: center;
     align-items: center;
+    height: 219px;
 }
+
 #image{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 140px;
     height: 140px;
     border-radius: 50%;
@@ -51,11 +53,13 @@ p{
     margin:5px;
 }
 
-
                                             /*  le cord de la page  */
 
 
-
+main{
+    display: flex;
+    flex-direction: row-reverse;
+}
                                             /* partie droite */
 
 .droite{                      
@@ -67,21 +71,25 @@ main .droite h2{
     padding-top: 10px;
 }
 .aligne{
+    display: flex;
     border-bottom: 3px #64B5F6 solid;
-    margin-top: 19px;
-    padding-bottom: 5px;
-    margin-right: 19px;
 }
 .aligne3{
+    display: flex;
     justify-content: space-between;
     margin-top: 19px;
 }
 .point{
+    display: flex;
     width: 40%;
     font-weight: bold;
 }
 .placer{
     padding-top: 9px;
+    font-size: 1.2em;
+}
+.dimention{
+    font-size: 0.6em;
 }
 .bien{
     padding-left: 13px;
@@ -96,6 +104,7 @@ p{
   text-align: justify;
 }
 #conteneur{
+    display: flex;
     justify-content: space-around;
     height: 170px;
 }
@@ -119,6 +128,19 @@ h4{
     text-align: justify;
     color: #1A237E;
 }
+
+.position:nth-of-type(1){
+    height: 500px;
+}
+.position:nth-of-type(2){
+    height: 500px;
+    padding-top: 250px;
+}
+.position:nth-of-type(3){
+    height: 200px;
+    padding-top: 100px;
+}
+
 #contact{
     margin-left: 15px;
     padding-top: 10%;
@@ -132,105 +154,153 @@ h4{
     width: 90%;
     padding-top: 15%;
 }
-
 #center{
+    display: flex;
     justify-content: space-around;
+    align-items: center;
     height: 170px;
     margin: auto;
+    font-size: 2em;
+    color: #263238;
 }
 .cercle{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 50px;
     height: 50px;
     border-radius: 50%;
     border: 2px black solid;
 }
+.color{
+    color: #64B5F6;
+}
+
+.taille{
+    font-size: 3.5em;
+}
+                            /*  responsive    */
 
 
+@media screen and (max-width: 1024px) {
+     .position:nth-of-type(2){
+        height: 490px;`
+        padding-top: 325px;
+    }
+}
 
-@media screen and (max-width: 634px)
+@media screen and (max-width: 785px) {
+     .position:nth-of-type(2){
+        padding-top: 440px;
+    }
+     .position:nth-of-type(3){
+        padding-top: 260px;
+    }
+    #contact p{
+        margin-left: 15px;
+    }
+}
+
+@media screen and (max-width: 683px)
 {
-
     #bloc_page{
-            border: 2px red solid;
-            /*height: 2900px;*/
-  }
+        border: none;
+        padding-right: 0;
+    }
+
   
   header{
-    display: flex;
-    height: 150px;
-    align-items: center;
-    width: 100%;
-  }
-  header .gauche{
-        background-color: #64B5F6;
-        height: 150px;
         display: flex;
+        flex-direction: column-reverse;
+        justify-content: space-around;
+        width: 100%;
+        margin: auto;
+    }
+  header .droite{
+        display: flex;
+        flex-direction: column;
         align-items: center;
-        
-  }
-  header h1+h2, h1{
-    margin-left: 15px;
-  }
+        width: 100%;
+        margin: auto;
+    }
+  header .gauche{
+        background-color: #ffff;
+        height: 100px;
+        width: 100%;
+        margin:0;
+    }
+  header h1+h2{
+        margin-right: 130px;
+    }
 
   #image{
-    width:80%;
-    width: 100px ;
-    height: 100px ;
-    margin:auto;
-   
-  }
+        width: 100px ;
+        height: 100px ;
+        border-radius: 50%;
+        box-shadow:  0 0 9px #E1F5FE;
+        overflow: hidden;
+    }
 
   img{
-    width: 95px;
-    height: 95px;
-    border-radius: 50%;
-    border: 2px black solid;
-    overflow: hidden;
-  }
-  main .partie{
-    display: flex;
-    /*flex-flow: row wrap;*/
-    flex-direction: column-reverse;
-    position: relative;
-}
-   
- main .droite:nth-child(odd){
-    /*border: 4px green solid;*/
-    margin: auto;
-    width: 100%;
-    
-    
- }
- 
- main .gauche:nth-child(even){
-        /*border: 4px black solid;*/
         width: 100%;
-        height: 100%;
-        margin: auto;   
+    
     }
-main section> div.gauche {
-        position: absolute;
-        width: 50%;
-        top: 2000px;
-        border: 3px #8AC007 solid ;
-        
-      } 
- main section:nth-last-of-type(0){
-    background-color: red;
- }
-section:nth-of-type(6){ 
-        
-        /*border: 5px yellow solid;*/
+    main{
+        display: flex;
+        flex-direction: column;
     }
+    main .droite{
+        width: 100%;
+        margin-left: 0;
+        margin-top: 90px;
+    }
+    main .gauche{
+        width: 100%;
+        margin-top: 90px;  
+    }
+    
+    .position:nth-of-type(1){
+        height: 350px;
+        padding-top: 30px;
+    }
+    .position:nth-of-type(2){
+        height: 300px;
+        padding-top: 100px;
+    }
+    .position:nth-of-type(3){
+        height: 250px;
+    }
+        #conteneur{
+        flex-direction: column;
+        justify-content: center;
+        margin-top: 50px;
+    }
+    .element{
+        padding: 10px;
+    } 
 }
 
+@media screen and (max-width: 320px){
 
+    header{
+        padding-top: 10px;
+    }
 
+    main .droite h2{
+        margin-left: 5px;
+        font-size: 23px;
+    }
 
-
-
-
-
+    .bloc{
+        flex-direction: column;
+        justify-content: flex-start;
+        width: 90%;
+        margin: 0px 10px 0px 9px;
+    }
+    .bien{
+        padding-left: 3px;
+    }
+}
 
 
 
